--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -10,6 +10,8 @@ name = "python"
 
   [analyzers.meta]
   runtime_version = "3.x.x"
+  type_checker = "mypy"
+  max_line_length = 88
 
 [[transformers]]
 name = "isort"
